--- a/ci/swift.yml
+++ b/ci/swift.yml
@@ -1,5 +1,5 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
+# 该工作流将构建一个 Swift 项目
+# 获取更多信息，请参阅：https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
 name: Swift
 
