--- a/ci/msbuild.yml
+++ b/ci/msbuild.yml
@@ -1,7 +1,5 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# 该工作流使用 GitHub 未认证的第三方提供的操作。
+# 这些操作由第三方提供，并受独立的服务条款、隐私政策和支持文档约束。
 
 name: MSBuild
 
@@ -12,12 +10,12 @@ on:
     branches: [ $default-branch ]
 
 env:
-  # Path to the solution file relative to the root of the project.
+  # 相对于项目根目录的解决方案文件路径。
   SOLUTION_FILE_PATH: .
 
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  # 要构建的配置类型。
+  # 如果需要覆盖多个配置类型，请将其转换为构建矩阵。
+  # https://docs.github.com/zh/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
   BUILD_CONFIGURATION: Release
 
 permissions:
@@ -30,15 +28,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Add MSBuild to PATH
+    - name: 将 MSBuild 添加到 PATH
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Restore NuGet packages
+    - name: 恢复 NuGet 包
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget restore ${{env.SOLUTION_FILE_PATH}}
 
-    - name: Build
+    - name: 构建
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
+      # 在这里添加 MSBuild 命令行的其他选项（如平台或详细程度）。
+      # 请参阅 https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
