--- a/ci/python-app.yml
+++ b/ci/python-app.yml
@@ -1,22 +1,27 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# 这是一个用于安装Python依赖、运行测试和使用单个Python版本进行代码检查的工作流。
+#如果想要了解更多信息，可以参考[这里](https://docs.github.com/zh/actions/automating-builds-and-tests/building-and-testing-python)。
 
+# 这个工作流的名称是Python application
 name: Python application
 
+# 定义触发工作流的事件
 on:
   push:
     branches: [ $default-branch ]
   pull_request:
     branches: [ $default-branch ]
 
+# 设置权限
 permissions:
   contents: read
 
+# 定义一个作业
 jobs:
   build:
-
+    # 在最新的Ubuntu系统上运行
     runs-on: ubuntu-latest
 
+    # 定义作业中的步骤
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -30,9 +35,9 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
+        # 如果存在Python语法错误或未定义的名称，则停止构建
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        # exit-zero将所有错误视为警告。GitHub编辑器的宽度为127字符
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
