--- a/ci/python-publish.yml
+++ b/ci/python-publish.yml
@@ -1,10 +1,8 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
+# 当发布时，此工作流将使用 Twine 上传 Python 包
+# 了解更多信息，请参阅：https://docs.github.com/zh/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# 该工作流使用未由 GitHub 认证的操作。
+# 它们由第三方提供，并受独立的服务条款、隐私政策和支持文档的约束。
 
 name: Upload Python Package
 
