--- a/ci/symfony.yml
+++ b/ci/symfony.yml
@@ -1,7 +1,5 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# 该工作流使用未经 GitHub 认证的操作。
+# 这些操作由第三方提供，并受独立的服务条款、隐私政策和支持文档约束。
 
 name: Symfony
 
@@ -18,8 +16,8 @@ jobs:
   symfony-tests:
     runs-on: ubuntu-latest
     steps:
-    #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
-    # change this to (see https://github.com/shivammathur/setup-php#bookmark-versioning):
+    # 要自动获取 shivammathur/setup-php 的错误修复和新的 PHP 版本，
+    # 请更改为（参见 https://github.com/shivammathur/setup-php#bookmark-versioning）：
     # uses: shivammathur/setup-php@v2
     - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
       with:
